--- a/css/sections/popular.css
+++ b/css/sections/popular.css
@@ -26,7 +26,7 @@
     display: flex;
     justify-content: center;
     gap: 24px;
-
+    padding: 12px;
 }
 
 .popular-foods__filters-btn {
@@ -55,11 +55,13 @@
 .popular-foods__filters-btn.active {
     background: #fff;
     color: var(--primary-color);
+    transition: transform 0.6s ease, background 0.6s ease, color 0.6s ease;
 }
 
 .popular-foods__filters-btn:hover {
     background: #fff;
     color: var(--primary-color);
+    transform: scale(1.1); /* make it grow 5% */
 }
 
 .popular-foods__catalogue {
